--- a/app/src/main/res/layout/second_main.xml
+++ b/app/src/main/res/layout/second_main.xml
@@ -55,5 +55,15 @@
         android:layout_alignParentRight="true"
         android:text="Hello World!" />
 
+    <Button
+        android:id="@+id/bottleLVL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Бутылочка"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:visibility="visible" />
+
 
 </RelativeLayout>
